# ngo-grant-finder

./: README.md  grant_finding_flow.html  pyproject.toml
output/: console_output  funding_sources.md
src/grant_finder/: main.py
src/grant_finder/crews/grant_finding_team/: grant_finding_team.py
src/grant_finder/crews/grant_finding_team/config/: agents.yaml  tasks.yaml
