[project]
name = "grant_finder"
version = "0.1.0"
description = "grant_finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
]

[project.scripts]
kickoff = "grant_finder.main:kickoff"
run_crew = "grant_finder.main:kickoff"
plot = "grant_finder.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
